Bug 23405 - regression: evdev button count is wrong
Summary: regression: evdev button count is wrong
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Input/evdev (show other bugs)
Version: git
Hardware: Other All
: medium normal
Assignee: Peter Hutterer
QA Contact: Xorg Project Team
URL: https://bugzilla.redhat.com/show_bug....
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-08-18 21:55 UTC by Peter Hutterer
Modified: 2009-08-20 16:40 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
0001-Only-take-the-driver-internal-button-mapping-to-coun.patch (1.48 KB, patch)
2009-08-19 18:14 UTC, Peter Hutterer
no flags Details | Splinter Review

Description Peter Hutterer 2009-08-18 21:55:30 UTC
Affects evdev >= 2.2.3 and git.

Evdev counts the number of buttons based on the configured mapping which may lead to the wrong button number.

e.g. a button mapping of "1 2 3 4 5 6 7 3 2" for a 5-button mouse will result in only 3 buttons being advertised to the server.
Comment 1 Peter Hutterer 2009-08-19 18:14:00 UTC
Created attachment 28801 [details] [review]
0001-Only-take-the-driver-internal-button-mapping-to-coun.patch
Comment 2 Peter Hutterer 2009-08-20 16:40:22 UTC
Pushed to master as 415b6ffa958e3103eeb52af4ccd881497169eed4.

evdev 2.2.5 released with bugfix. Closing as fixed.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.